# Transmitter-ESP32S3

./: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.c
main/data/: input_data.c  input_data.h  setup_data.c  setup_data.h
main/espnow/: espnow.c  espnow.h  espnow_helper.c  espnow_helper.h  messages.h
main/gui/: gui.c  gui.h
main/gui/components/: centered_label.c  centered_label.h  channel_selector.c  channel_selector.h  flex_components.c  flex_components.h  label_switch.c  label_switch.h  simple_button.c  simple_button.h  window_component.c  window_component.h
main/gui/driver/esp32/: lvgl_port.c  lvgl_port.h  rgb_interface.c  rgb_interface.h  waveshare_bsp.c  waveshare_bsp.h
main/gui/screens/1_main/: main_screen.c  main_screen.h
main/gui/screens/1_main/monitor/: channel_monitor.c  channel_monitor.h
main/gui/screens/1_main/settings/: model_setup.c  model_setup.h  servo_travel.c  servo_travel.h  servo_trim.c  servo_trim.h
main/gui/screens/1_main/tabs/: connection_tab.c  connection_tab.h  home_tab.c  home_tab.h  settings_tab.c  settings_tab.h
main/gui/simulator/: simulation_gui.c  simulation_gui.h
main/gui/styles/: styles.c  styles.h
main/sdcard/: sdcard_interface.c  sdcard_interface.h
